--- a/apps/esphome/config/mini-switch-4.yaml
+++ b/apps/esphome/config/mini-switch-4.yaml
@@ -6,5 +6,5 @@ substitutions:
   light_restore_mode: RESTORE_DEFAULT_OFF
 
 packages:
-  connection: !include ./packages/connection.yaml
-  mini-switch: !include ./packages/mini-switch.yaml
+  connection: !include ./packages_connection.yaml
+  mini-switch: !include ./packages_mini-switch.yaml
