--- a/apps/esphome/config/smart-plug-v2-2.yaml
+++ b/apps/esphome/config/smart-plug-v2-2.yaml
@@ -6,5 +6,5 @@ substitutions:
   relay_restore_mode: RESTORE_DEFAULT_OFF
 
 packages:
-  connection: !include ./packages/connection.yaml
-  smart-plug-v2: !include ./packages/smart-plug-v2.yaml
+  connection: !include ./packages_connection.yaml
+  smart-plug-v2: !include ./packages_smart-plug-v2.yaml
