Revert "esphome: Fix config flattening subdirectories"
This reverts commit 7559e3e8af6abbd050d51c6a4c15a3e9e754ea09.

--- a/apps/esphome/config/lilygo-higrow-1.yaml
+++ b/apps/esphome/config/lilygo-higrow-1.yaml
@@ -17,5 +17,5 @@ substitutions:
   # sleep_duration: 60min
 
 packages:
-  connection: !include ./packages_connection.yaml
-  lilygo-higrow: !include ./packages_lilygo-higrow.yaml
+  connection: !include ./packages/connection.yaml
+  lilygo-higrow: !include ./packages/lilygo-higrow.yaml
