esphome: Copy original files and not symbolic links

--- a/apps/esphome/values.yaml
+++ b/apps/esphome/values.yaml
@@ -15,7 +15,7 @@ app-template:
             - -c
           args:
             - >
-              cp -r /original/config/* /config/
+              cp --dereference -r /original/config/* /config/
       containers:
         main:
           image:
