--- a/system/kube-system/kustomization.yaml
+++ b/system/kube-system/kustomization.yaml
@@ -7,6 +7,13 @@ resources:
 
 helmCharts:
   - includeCRDs: true
+    name: cilium
+    namespace: kube-system
+    releaseName: cilium
+    repo: https://helm.cilium.io/
+    valuesFile: cilium-values.yaml
+    version: 1.15.1
+  - includeCRDs: true
     name: snapshot-controller
     namespace: kube-system
     releaseName: kube-system
