kube-system: Fix tls definition in hubble ui ingress

--- a/system/kube-system/cilium-values.yaml
+++ b/system/kube-system/cilium-values.yaml
@@ -139,9 +139,9 @@ hubble:
       hosts:
         - &host hubble.internal.grigri.cloud
       tls:
-        hosts:
-          - *host
-        secretName: hubble-tls-certificate
+        - secretName: hubble-tls-certificate
+          hosts:
+            - *host
 
 prometheus:
   enabled: true
