--- a/system/kube-system/cilium-values.yaml
+++ b/system/kube-system/cilium-values.yaml
@@ -149,6 +149,7 @@ prometheus:
     enabled: true
     labels:
       release: monitoring
+    trustCRDsExist: true
 dashboards:
   enabled: true
   label: grafana_dashboard
