kube-system: Add native routing CIDR to cilium

--- a/system/kube-system/cilium-values.yaml
+++ b/system/kube-system/cilium-values.yaml
@@ -143,6 +143,7 @@ hubble:
           hosts:
             - *host
 
+ipv4NativeRoutingCIDR: "10.0.0.0/8"
 prometheus:
   enabled: true
   serviceMonitor:
