--- a/system/kube-system/cilium-values.yaml
+++ b/system/kube-system/cilium-values.yaml
@@ -24,6 +24,8 @@ securityContext:
       - SYS_MODULE
       # Could be an alternative for the SYS_ADMIN for the RLIMIT_NPROC
       - SYS_RESOURCE
+      # it should not be required for Kernel >= 5.8 but
+      # it triggers the error `failed to create new netns: operation not permitted` without it
       - SYS_ADMIN
       # Both PERFMON and BPF requires kernel 5.8, container runtime
       # cri-o >= v1.22.0 or containerd >= v1.5.0.
