kube-system: Add k8s api server host and port
When kube-proxy is removed cilium cannot contact kube api-server:
https://github.com/cilium/cilium/issues/21148

--- a/system/kube-system/cilium-values.yaml
+++ b/system/kube-system/cilium-values.yaml
@@ -7,6 +7,9 @@ serviceAccounts:
   hubblecertgen:
     create: false
 
+k8sServiceHost: grigri.grigri
+k8sServicePort: "6443"
+
 securityContext:
   capabilities:
     ciliumAgent:
