metal: Add traceroute to debug packages

--- a/metal/roles/prepare/defaults/main.yml
+++ b/metal/roles/prepare/defaults/main.yml
@@ -22,6 +22,7 @@ prepare_basic_packages:
   - bpftrace
   - bpfcc-tools
   - dnsutils
+  - traceroute
   # -linux-tools-{{ ansible_kernel }}
   - sysstat
   - lsof
