kube-system: Add cilium bgp configuration

--- a/system/kube-system/kustomization.yaml
+++ b/system/kube-system/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: kube-system
 
 resources:
+  - resources/cilium-bgp-config.yaml
   - resources/runtime-class.yaml
 
 helmCharts:
