--- a/apps/mosquitto-tls/values.yaml
+++ b/apps/mosquitto-tls/values.yaml
@@ -34,7 +34,7 @@ app-template:
     main:
       type: LoadBalancer
       annotations:
-        metallb.universe.tf/loadBalancerIPs: "192.168.193.10"
+        lbipam.cilium.io/ips: "192.168.193.10"
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/hostname: mosquitto-tls.internal.grigri.cloud
       externalTrafficPolicy: Local
