--- a/apps/qbittorrent/values.yaml
+++ b/apps/qbittorrent/values.yaml
@@ -84,7 +84,7 @@ app-template:
       controller: main
       type: LoadBalancer
       annotations:
-        metallb.universe.tf/loadBalancerIPs: "192.168.193.7"
+        lbipam.cilium.io/ips: "192.168.193.7"
         external-dns.alpha.kubernetes.io/enabled: "true"
       externalTrafficPolicy: Local
       ports:
