--- a/apps/transcoder/values.yaml
+++ b/apps/transcoder/values.yaml
@@ -87,7 +87,7 @@ app-template:
       type: LoadBalancer
       externalTrafficPolicy: Local
       annotations:
-        metallb.universe.tf/loadBalancerIPs: "192.168.193.3"
+        lbipam.cilium.io/ips: "192.168.193.3"
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/hostname: transcoder-rabbit.internal.grigri.cloud
       ports:
