--- a/system/ingress-nginx-external/values.yaml
+++ b/system/ingress-nginx-external/values.yaml
@@ -75,7 +75,7 @@ ingress-nginx:
     service:
       enabled: true
       annotations:
-        metallb.universe.tf/loadBalancerIPs: "192.168.193.4"
+        lbipam.cilium.io/ips: "192.168.193.4"
 
       enableHttp: true
       enableHttps: true
