--- a/system/ingress-nginx/values.yaml
+++ b/system/ingress-nginx/values.yaml
@@ -76,7 +76,7 @@ ingress-nginx:
       enabled: true
 
       annotations:
-        metallb.universe.tf/loadBalancerIPs: "192.168.193.1"
+        lbipam.cilium.io/ips: "192.168.193.1"
       labels: {}
 
       ## List of IP addresses at which the controller services are available
