--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -65,7 +65,7 @@ app-template:
       controller: main
       type: LoadBalancer
       annotations:
-        metallb.universe.tf/loadBalancerIPs: "192.168.193.8"
+        lbipam.cilium.io/ips: "192.168.193.8"
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/hostname: ldaps.idm.internal.grigri.cloud
       externalTrafficPolicy: Local
