kube-system: Allow first and last IPs in cilium BGP pool

--- a/system/kube-system/resources/cilium/load-balancer-ip-pool.yaml
+++ b/system/kube-system/resources/cilium/load-balancer-ip-pool.yaml
@@ -3,5 +3,6 @@ kind: CiliumLoadBalancerIPPool
 metadata:
   name: default
 spec:
+  allowFirstLastIPs: "Yes"
   blocks:
     - cidr: "192.168.193.0/24"
