--- a/system/ingress-nginx-external/values.yaml
+++ b/system/ingress-nginx-external/values.yaml
@@ -76,7 +76,7 @@ ingress-nginx:
       enabled: true
       annotations:
         lbipam.cilium.io/ips: "192.168.193.4"
-
+      loadBalancerClass: "io.cilium/bgp-control-plane"
       enableHttp: true
       enableHttps: true
 
