--- a/system/ingress-nginx/values.yaml
+++ b/system/ingress-nginx/values.yaml
@@ -76,7 +76,10 @@ ingress-nginx:
       enabled: true
 
       annotations:
+        # Cilium v1.16+
         lbipam.cilium.io/ips: "192.168.193.1"
+        # Cilium v1.15
+        io.cilium/lb-ipam-ips: "192.168.193.1"
       labels: {}
 
       ## List of IP addresses at which the controller services are available
