--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -65,7 +65,10 @@ app-template:
       controller: main
       type: LoadBalancer
       annotations:
+        # Cilium v1.16+
         lbipam.cilium.io/ips: "192.168.193.8"
+        # Cilium v1.15
+        io.cilium/lb-ipam-ips: "192.168.193.8"
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/hostname: ldaps.idm.internal.grigri.cloud
       externalTrafficPolicy: Local
