--- a/apps/mosquitto-tls/values.yaml
+++ b/apps/mosquitto-tls/values.yaml
@@ -34,7 +34,10 @@ app-template:
     main:
       type: LoadBalancer
       annotations:
+        # Cilium v1.16+
         lbipam.cilium.io/ips: "192.168.193.10"
+        # Cilium v1.15
+        io.cilium/lb-ipam-ips: "192.168.193.10"
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/hostname: mosquitto-tls.internal.grigri.cloud
       externalTrafficPolicy: Local
