--- a/apps/mosquitto/values.yaml
+++ b/apps/mosquitto/values.yaml
@@ -54,7 +54,10 @@ app-template:
     main:
       type: LoadBalancer
       annotations:
+        # Cilium v1.16+
         lbipam.cilium.io/ips: "192.168.193.9"
+        # Cilium v1.15
+        io.cilium/lb-ipam-ips: "192.168.193.9"
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/hostname: mosquitto.internal.grigri.cloud
       externalTrafficPolicy: Local
