--- a/apps/qbittorrent/values.yaml
+++ b/apps/qbittorrent/values.yaml
@@ -84,7 +84,10 @@ app-template:
       controller: main
       type: LoadBalancer
       annotations:
+        # Cilium v1.16+
         lbipam.cilium.io/ips: "192.168.193.7"
+        # Cilium v1.15
+        io.cilium/lb-ipam-ips: "192.168.193.7"
         external-dns.alpha.kubernetes.io/enabled: "true"
       externalTrafficPolicy: Local
       ports:
