--- a/apps/unifi/values.yaml
+++ b/apps/unifi/values.yaml
@@ -32,7 +32,10 @@ app-template:
       type: LoadBalancer
       externalTrafficPolicy: Local
       annotations:
+        # Cilium v1.16+
         lbipam.cilium.io/ips: "192.168.193.2"
+        # Cilium v1.15
+        io.cilium/lb-ipam-ips: "192.168.193.2"
       ports:
         http:
           port: 8443
