--- a/system/kube-system/cilium-values.yaml
+++ b/system/kube-system/cilium-values.yaml
@@ -66,7 +66,9 @@ securityContext:
 autoDirectNodeRoutes: true
 
 bgp:
-  enabled: false
+  enabled: true
+  announce:
+    loadbalancerIP: true
 
 # -- This feature set enables virtual BGP routers to be created via
 # CiliumBGPPeeringPolicy CRDs.
