kube-system: Disable bgp
This is clearly mutual exclusive with BGP control plane

--- a/system/kube-system/cilium-values.yaml
+++ b/system/kube-system/cilium-values.yaml
@@ -66,9 +66,7 @@ securityContext:
 autoDirectNodeRoutes: true
 
 bgp:
-  enabled: true
-  announce:
-    loadbalancerIP: true
+  enabled: false
 
 # -- This feature set enables virtual BGP routers to be created via
 # CiliumBGPPeeringPolicy CRDs.
