--- a/system/kube-system/resources/cilium/bgp-peering-policy.yaml
+++ b/system/kube-system/resources/cilium/bgp-peering-policy.yaml
@@ -8,6 +8,14 @@ spec:
       kubernetes.io/os: linux
   virtualRouters:
     - localASN: 64513
+      # Advertisement of services to BGP peers
+      # https://docs.cilium.io/en/v1.15/network/bgp-control-plane/#service-announcements
+      serviceSelector:
+        matchExpressions:
+          - key: advertise-bgp
+            operator: NotIn
+            values:
+              - "never-used-value"
       neighbors:
         - peerAddress: 192.168.192.1/32
           peerASN: 64513
