--- a/system/kube-system/resources/cilium/bgp-peering-policy.yaml
+++ b/system/kube-system/resources/cilium/bgp-peering-policy.yaml
@@ -17,5 +17,5 @@ spec:
             values:
               - "never-used-value"
       neighbors:
-        - peerAddress: 192.168.192.1/32
-          peerASN: 64513
+        - peerAddress: "192.168.192.1/32"
+          peerASN: 64512
