kube-system: Enable externalTrafficPolicy `local` in all services
This reverts commit 5ec3bc98a74fc9748797d30cf2c8c98a121d97cb.

--- a/system/ingress-nginx-external/values.yaml
+++ b/system/ingress-nginx-external/values.yaml
@@ -92,6 +92,7 @@ ingress-nginx:
         https: https
 
       type: LoadBalancer
+      externalTrafficPolicy: Local
       internal:
         enabled: false
 
