--- a/apps/mosquitto-tls/values.yaml
+++ b/apps/mosquitto-tls/values.yaml
@@ -40,6 +40,7 @@ app-template:
         io.cilium/lb-ipam-ips: "192.168.193.10"
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/hostname: mosquitto-tls.internal.grigri.cloud
+      externalTrafficPolicy: Local
       ports:
         http:
           enabled: false
