--- a/apps/transcoder/values.yaml
+++ b/apps/transcoder/values.yaml
@@ -85,6 +85,7 @@ app-template:
     rabbit:
       controller: rabbit
       type: LoadBalancer
+      externalTrafficPolicy: Local
       annotations:
         # Cilium v1.16+
         lbipam.cilium.io/ips: "192.168.193.3"
