--- a/apps/unifi/values.yaml
+++ b/apps/unifi/values.yaml
@@ -30,6 +30,7 @@ app-template:
   service:
     main:
       type: LoadBalancer
+      externalTrafficPolicy: Local
       annotations:
         # Cilium v1.16+
         lbipam.cilium.io/ips: "192.168.193.2"
