--- a/system/ingress-nginx/values.yaml
+++ b/system/ingress-nginx/values.yaml
@@ -80,13 +80,7 @@ ingress-nginx:
         lbipam.cilium.io/ips: "192.168.193.1"
         # Cilium v1.15
         io.cilium/lb-ipam-ips: "192.168.193.1"
-      labels: {}
-
-      ## List of IP addresses at which the controller services are available
-      ## Ref: https://kubernetes.io/docs/user-guide/services/#external-ips
-      ##
-      externalIPs: []
-
+      loadBalancerClass: "io.cilium/bgp-control-plane"
       enableHttp: true
       enableHttps: true
 
@@ -99,17 +93,9 @@ ingress-nginx:
         https: https
 
       type: LoadBalancer
-
-      ## Enables an additional internal load balancer (besides the external one).
-      ## Annotations are mandatory for the load balancer to come up. Varies with the cloud service.
+      externalTrafficPolicy: Local
       internal:
         enabled: false
-        annotations: {}
-
-        ## Set external traffic policy to: "Local" to preserve source IP on
-        ## providers supporting it
-        ## Ref: https://kubernetes.io/docs/tutorials/services/source-ip/#source-ip-for-services-with-typeloadbalancer
-        # externalTrafficPolicy: ""
 
     extraVolumeMounts:
       - name: dshm
