mintpsicologia: Change service to ClusterIP instead of LoadBalancer

--- a/apps/mintpsicologia/values.yaml
+++ b/apps/mintpsicologia/values.yaml
@@ -26,6 +26,8 @@ wordpress:
     requests:
       memory: 512Mi
       cpu: 300m
+  service:
+    type: ClusterIP
   persistence:
     enabled: true
     size: 1Gi
