Revert "kube-system: Disable externalTrafficPolicy `local` in all services"
This reverts commit fad22f7eb33f1bf56bf6f55f08fb972c10fd35e1.

--- a/system/ingress-nginx/values.yaml
+++ b/system/ingress-nginx/values.yaml
@@ -93,6 +93,7 @@ ingress-nginx:
         https: https
 
       type: LoadBalancer
+      externalTrafficPolicy: Local
       internal:
         enabled: false
 
