--- a/system/kube-system/cilium-values.yaml
+++ b/system/kube-system/cilium-values.yaml
@@ -160,6 +160,7 @@ dashboards:
 # Deprecated without replacement in 1.15. To be removed in 1.16.
 remoteNodeIdentity: false
 
+# Test if this is the cause of externalTrafficPolicy `Local` not working`
 routingMode: native
 operator:
   prometheus:
