--- a/system/monitoring/kustomization.yaml
+++ b/system/monitoring/kustomization.yaml
@@ -49,7 +49,7 @@ patches:
     target:
       group: apiextensions.k8s.io
       kind: CustomResourceDefinition
-      name: prometheuses.monitoring.coreos.com
+      name: alertmanagers.monitoring.coreos.com
       version: v1
   - patch: |-
       - op: add
@@ -59,4 +59,13 @@ patches:
       group: apiextensions.k8s.io
       kind: CustomResourceDefinition
       name: prometheusagents.monitoring.coreos.com
+      version: v1
+  - patch: |-
+      - op: add
+        path: "/metadata/annotations/argocd.argoproj.io~1sync-options"
+        value: "Replace=true"
+    target:
+      group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      name: prometheuses.monitoring.coreos.com
       version: v1
