--- a/platform/velero/values.yaml
+++ b/platform/velero/values.yaml
@@ -44,6 +44,7 @@ velero:
         config:
           bucket: velero
           prefix: zfs
+          multiPartChunkSize: 100Mi
           # this is the namespace where ZFS-LocalPV creates all the CRs, passed as OPENEBS_NAMESPACE env in the ZFS-LocalPV deployment
           namespace: zfs-localpv
           provider: aws
@@ -56,6 +57,11 @@ velero:
         config:
           bucket: velero
           prefix: zfs
+          # You can specify the multipart_chunksize  here for explicitness.
+          # multiPartChunkSize can be from 5Mi(5*1024*1024 Bytes) to 5Gi
+          # For more information: https://docs.min.io/docs/minio-server-limits-per-tenant.html
+          # If not set then it will be calculated from the file size
+          multiPartChunkSize: 100Mi
           # number of incremental backups we want to have
           # 3 weekly incremental + 1 full to have the full month backup
           incrBackupCount: "11"
@@ -70,7 +76,7 @@ velero:
     fsBackupTimeout: 32h
     defaultItemOperationTimeout: 32h
     garbageCollectionFrequency: 24h
-    logLevel: debug
+    logLevel: info
 
   credentials:
     existingSecret: velero-bucket-credentials
