--- a/system/kube-system/resources/cilium/bgp-peering-policy.yaml
+++ b/system/kube-system/resources/cilium/bgp-peering-policy.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   nodeSelector:
     matchLabels:
-      kubernetes.io/os: linux
+      kubernetes.io/arch: amd64
   virtualRouters:
     - localASN: 64513
       # Advertisement of services to BGP peers
