--- a/system/kube-system/cilium-values.yaml
+++ b/system/kube-system/cilium-values.yaml
@@ -66,7 +66,7 @@ securityContext:
 
 # If all nodes share a single L2 network, then this can be taken care of by enabling
 # the option auto-direct-node-routes: true. Otherwise, an additional system component such as a BGP daemon must be run
-autoDirectNodeRoutes: true
+autoDirectNodeRoutes: false
 
 bgp:
   enabled: false
@@ -163,8 +163,22 @@ dashboards:
 # Deprecated without replacement in 1.15. To be removed in 1.16.
 remoteNodeIdentity: false
 
-# Test if this is the cause of externalTrafficPolicy `Local` not working`
-routingMode: native
+tunnelProtocol: vxlan
+
+# -- Enable native-routing mode or tunneling mode.
+# Possible values:
+#   - ""
+#   - native
+#   - tunnel
+# @default -- `"tunnel"`
+routingMode: tunnel
+# # Test if this is the cause of externalTrafficPolicy `Local` not working`
+# routingMode: native
+
+# -- Configure VXLAN and Geneve tunnel port.
+# @default -- Port 8472 for VXLAN, Port 6081 for Geneve
+tunnelPort: 8472
+
 operator:
   prometheus:
     enabled: true
