system-upgrade: Disable drain

--- a/system/system-upgrade/k3s/agent.yaml
+++ b/system/system-upgrade/k3s/agent.yaml
@@ -17,9 +17,13 @@ spec:
       - prepare
       - k3s-server
   concurrency: 1
+  # If left unspecified, no drain will be performed.
+  # See:
+  # - https://kubernetes.io/docs/tasks/administer-cluster/safely-drain-node/
+  # - https://kubernetes.io/docs/reference/generated/kubectl/kubectl-commands#drain
+  # drain:
+  #   force: true
+  #   skipWaitForDeleteTimeout: 300  # Honor PodDisruptionBudgets
   cordon: true
-  drain:
-    force: true
-    skipWaitForDeleteTimeout: 300  # Honor PodDisruptionBudgets
   upgrade:
     image: rancher/k3s-upgrade
