cilium: Remove subnet `/32` to neighbor IP

--- a/system/kube-system/resources/cilium/bgp-peering-policy.yaml
+++ b/system/kube-system/resources/cilium/bgp-peering-policy.yaml
@@ -19,5 +19,5 @@ spec:
             values:
               - "never-used-value"
       neighbors:
-        - peerAddress: "192.168.192.1/32"
+        - peerAddress: 192.168.192.1
           peerASN: 64512
