--- a/apps/transcoder/values.yaml
+++ b/apps/transcoder/values.yaml
@@ -94,6 +94,7 @@ app-template:
         io.cilium/lb-ipam-ips: "192.168.193.3"
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/hostname: transcoder-rabbit.internal.grigri.cloud
+      externalTrafficPolicy: Local
       ports:
         tcp-clients:
           enabled: true
