--- a/apps/unifi/values.yaml
+++ b/apps/unifi/values.yaml
@@ -35,6 +35,7 @@ app-template:
         lbipam.cilium.io/ips: "192.168.193.2"
         # Cilium v1.15
         io.cilium/lb-ipam-ips: "192.168.193.2"
+      externalTrafficPolicy: Local
       ports:
         http:
           port: 8443
