--- a/system/ingress-nginx-external/values.yaml
+++ b/system/ingress-nginx-external/values.yaml
@@ -80,6 +80,7 @@ ingress-nginx:
         # Cilium v1.15
         io.cilium/lb-ipam-ips: "192.168.193.4"
       loadBalancerClass: "io.cilium/bgp-control-plane"
+      externalTrafficPolicy: Local
       enableHttp: true
       enableHttps: true
 
