kube-system: Add kube-router to advertise BGP routes in cilium

--- a/system/kube-system/kustomization.yaml
+++ b/system/kube-system/kustomization.yaml
@@ -15,6 +15,12 @@ helmCharts:
     repo: https://helm.cilium.io/
     valuesFile: cilium-values.yaml
     version: 1.15.1
+  - name: kube-router
+    namespace: kube-system
+    releaseName: kube-router
+    repo: https://charts.enix.io/
+    valuesFile: kube-router-values.yaml
+    version: 1.10.0
   - includeCRDs: true
     name: nvidia-device-plugin
     namespace: kube-system
