--- a/system/ingress-nginx/values.yaml
+++ b/system/ingress-nginx/values.yaml
@@ -81,6 +81,7 @@ ingress-nginx:
         # Cilium v1.15
         io.cilium/lb-ipam-ips: "192.168.193.1"
       loadBalancerClass: "io.cilium/bgp-control-plane"
+      externalTrafficPolicy: Local
       enableHttp: true
       enableHttps: true
       ports:
