transcoder: Fix rabbitmq probe port and protocol

--- a/apps/transcoder/values.yaml
+++ b/apps/transcoder/values.yaml
@@ -63,7 +63,10 @@ app-template:
             readiness: *probes
             startup:
               enabled: true
+              custom: true
               spec:
+                tcpSocket:
+                  port: *port_rabbit
                 failureThreshold: 90
           env:
             RABBITMQ_DEFAULT_USER:
