sonarr: Update names for app-template v3

--- a/apps/sonarr/values.yaml
+++ b/apps/sonarr/values.yaml
@@ -1,9 +1,9 @@
 app-template:
   controllers:
-    main:
+    sonarr:
       type: statefulset
       containers:
-        main:
+        sonarr:
           image:
             repository: ghcr.io/onedr0p/sonarr-develop
             tag: 4.0.2.1341@sha256:e7e1a75fa1586559f91d5e26caac72f96f1e18ae01ccb2d7c7ce589a3bedaca4
@@ -28,13 +28,14 @@ app-template:
             readiness: *probe
 
   service:
-    main:
+    sonarr:
+      controller: sonarr
       ports:
         http:
           port: *port
 
   ingress:
-    main:
+    sonarr:
       enabled: true
       className: nginx-internal
       annotations:
@@ -46,7 +47,7 @@ app-template:
             - path: /
               pathType: Prefix
               service:
-                name: main
+                identifier: sonarr
                 port: http
       tls:
         - hosts:
@@ -68,7 +69,7 @@ app-template:
             - path: /
               pathType: Prefix
               service:
-                name: main
+                identifier: sonarr
                 port: http
       tls:
         - hosts:
