--- a/apps/radarr/values.yaml
+++ b/apps/radarr/values.yaml
@@ -1,9 +1,9 @@
 app-template:
   controllers:
-    main:
+    radarr:
       type: statefulset
       containers:
-        main:
+        radarr:
           image:
             repository: ghcr.io/onedr0p/radarr-develop
             tag: 5.4.3.8677@sha256:5af64ec397048c9c86a306b18072aa4c1ce60cd7ce6674c111ef59517ea96ea0
@@ -19,13 +19,14 @@ app-template:
               memory: 400Mi
 
   service:
-    main:
+    radarr:
+      controller: radarr
       ports:
         http:
           port: 7878
 
   ingress:
-    main:
+    radarr:
       enabled: true
       className: nginx-internal
       annotations:
@@ -37,7 +38,7 @@ app-template:
             - path: /
               pathType: Prefix
               service:
-                name: main
+                identifier: radarr
                 port: http
       tls:
         - hosts:
@@ -59,7 +60,7 @@ app-template:
             - path: /
               pathType: Prefix
               service:
-                name: main
+                identifier: radarr
                 port: http
       tls:
         - hosts:
