unpackerr: Fix probes for app-template v3

--- a/apps/unpackerr/values.yaml
+++ b/apps/unpackerr/values.yaml
@@ -29,6 +29,7 @@ app-template:
 
           probes:
             liveness: &probe
+              enabled: true
               custom: true
               spec:
                 httpGet:
